err/psls.err
Listing '.'...
Listing './bin'...
Compiling './bin/psls.py'...
***   File "./bin/psls.py", line 246
    print "usage: psls.py config.yaml"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Compiling './lib/python3.5/site-packages/FortranIO.py'...
***   File "./lib/python3.5/site-packages/FortranIO.py", line 72
    print 'the byte-swapping is', self.swap
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psls-0.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Compiling './lib/python3.5/site-packages/sls.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (sls.py, line 88)
Compiling './lib/python3.5/site-packages/transit.py'...
***   File "./lib/python3.5/site-packages/transit.py", line 312
    print "Negative p"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/universal_pattern.py'...
***   File "./lib/python3.5/site-packages/universal_pattern.py", line 181
    print 'nup,np,ngp,Pg:',nup,nnup,ngp,Pgp
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
